tests/error/pointer_outside_class.gw
// [contains] can only be used at class scope
static typedef void (my_function)(){}
